--- a/s3_to_snowflake.ipynb
+++ b/s3_to_snowflake.ipynb
@@ -16,7 +16,7 @@
     "  TYPE = EXTERNAL_STAGE\n",
     "  STORAGE_PROVIDER = S3\n",
     "  ENABLED = TRUE\n",
-    "  STORAGE_AWS_ROLE_ARN = 'arn:aws:iam::53802322:role/snow_4092'(#copy ARN from role section in IAM)\n",
+    "  STORAGE_AWS_ROLE_ARN = 'arn:aws:iam::53802322:role/<bucket_name>'(#copy ARN from role section in IAM)\n",
     "  STORAGE_ALLOWED_LOCATIONS = ('s3://consumercompl42/consumer42/');(#copy s3 url from folder inside bucket)\n",
     "\n",
     "#CHECK INTEGRATION DETAILS:\n",
